--- a/MergeSorts.ipynb
+++ b/MergeSorts.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2cswzu1RFk6vMfEZl/pyr",
+      "authorship_tag": "ABX9TyMClB4fUQsrwtKvl+oJ45VN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -574,14 +574,7 @@
         "    new_results[\"input_size\"].append(time_results[\"Input_size\"])\n",
         "    print(\"\\n\")\n",
         "\n",
-        "  return new_results\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "  return new_results\n"
       ],
       "metadata": {
         "id": "iB6uHdpBX-7D"
